--- a/Slice.Web/Pages/Shared/_Layout.cshtml
+++ b/Slice.Web/Pages/Shared/_Layout.cshtml
@@ -27,27 +27,38 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Admin/Orders/OrderList">Orders</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Admin/Orders/ManageOrder">Manage Order</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Content Managment</a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item nav-item" asp-area="" asp-page="/Admin/Categories/Index">
-                                    Categories
-                                </a>
-                                <a class="dropdown-item nav-item" asp-area="" asp-page="/Admin/FoodTypes/Index">
-                                    Food Types
-                                </a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item nav-item" asp-area="" asp-page="/Admin/Products/Index">
-                                    Products
-                                </a>
-                            </div>
-                        </li>
+                        @if (User.IsInRole(Constants.ManagerRole) || User.IsInRole(Constants.FrontDeskRole))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-page="/Admin/Orders/OrderList">Orders</a>
+                            </li>
+                        }
+
+                        @if (User.IsInRole(Constants.ManagerRole) || User.IsInRole(Constants.KitchenRole))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-page="/Admin/Orders/ManageOrder">Manage Order</a>
+                            </li>
+                        }
+
+                        @if (User.IsInRole(Constants.ManagerRole))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Content Managment</a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item nav-item" asp-area="" asp-page="/Admin/Categories/Index">
+                                        Categories
+                                    </a>
+                                    <a class="dropdown-item nav-item" asp-area="" asp-page="/Admin/FoodTypes/Index">
+                                        Food Types
+                                    </a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item nav-item" asp-area="" asp-page="/Admin/Products/Index">
+                                        Products
+                                    </a>
+                                </div>
+                            </li>
+                        }
                         <li>
                             <a class="nav-link text-white" asp-area="" asp-page="/Customer/ShoppingCart/Index">
                                 @await Component.InvokeAsync("Cart")
