--- a/Slice.Web/Pages/Shared/_Layout.cshtml
+++ b/Slice.Web/Pages/Shared/_Layout.cshtml
@@ -52,9 +52,12 @@
                                     <a class="dropdown-item nav-item" asp-area="" asp-page="/Admin/FoodTypes/Index">
                                         Food Types
                                     </a>
-                                    <div class="dropdown-divider"></div>
                                     <a class="dropdown-item nav-item" asp-area="" asp-page="/Admin/Products/Index">
                                         Products
+                                    </a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item nav-item" asp-area="Identity" asp-page="/Account/Register">
+                                        Register Employee
                                     </a>
                                 </div>
                             </li>
